Fix button alignment on iOS

--- a/_src/_assets/_scss/03 - components/_button.scss
+++ b/_src/_assets/_scss/03 - components/_button.scss
@@ -5,6 +5,7 @@
     background-color: $link-color;
     color: $white;
     font-size: 1.2rem;
+    line-height: 2rem;
     text-transform: uppercase;
     font-weight: bold;
     -webkit-appearance: none;
